# TOP

./: .gitignore  .replit  Dockerfile  README.md  app.json  configs.py  helpers.py  main.py  pyproject.toml  requirements.txt  start.sh
Team Tele Roid/: __init__.py  database.py
plugins/: add_api.py  callback.py  commands.py  connect.py  groups.py  remove_api.py  tgraph.py
